Contact section improved, menu mobile modal z-index fixed, unnecessary files removed

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -50,7 +50,6 @@ header {
                 width: 100%;
                 // span in "../base/_typography.scss"
             }
-
         }
     }
     .video-container {
@@ -118,6 +117,7 @@ header {
     top: 0;
     bottom: 0;
     width: 100%;
+    z-index: 9;
 
     display: flex;
     flex-direction: column;
