--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,6 +1,5 @@
 @use "base/colors" as c;
 @use "base/mixins" as m;
-@use "base/typography" as f;
 
 .projects {
     display: grid;
@@ -78,12 +77,14 @@
     display: flex;
     flex-direction: column;
     background-color: c.$blueMid;
-    @include m.tablet {
+    @include m.custom(750px) {
         flex-direction: row;
     }
     img{
-        width: 35rem;
-        height: 35rem;
+        // width: 100%;
+        max-width: 35rem;
+        height: auto;
+        margin: auto;
     }
     .sobremi__content {
         padding: 2rem;
@@ -91,23 +92,31 @@
             display: flex;
             justify-content: space-between;
             margin-bottom: 2rem;
+            gap: 1rem;
+            flex-direction: column-reverse;
+            align-items: center;
+            @include m.tablet {
+                flex-direction: row;
+            }
             > div, > a{
                 display: flex;
                 align-items: center;
+                max-width: 22rem;
             }
-            p{color: c.$grey;}
+            p{
+                color: c.$grey;
+            }
             svg {
                 margin-right: 1rem;
             }
             a {
                 color: c.$orange;
                 text-decoration: none;
-                font-family: f.$headings;
                 font-size: 2rem;
-                font-weight: 700;
                 text-align: center;
                 border: 3px solid c.$orange;
                 padding: .7rem 1.4rem;
+                letter-spacing: 1px;
             }
         }        
         p {
